# ece-4012-drone-inspection

drone-code/: .gitignore  CMakeLists.txt  README.md  gamecontrollerdb.txt  makefile
drone-code/analysis/: plot_logs.py
drone-code/flight_control/: CMakeLists.txt  FlightControl.cpp  FlightControl.hpp  Gamepad.hpp
drone-code/path_planning/: CMakeLists.txt  path_planner.cpp  path_planner.h  path_planner_test.cpp  path_to_logfile.cpp
logs/matlab_datasets/: matlab_out_c130.csv  matlab_out_c141_no_engines.csv
path-planning/: ex_ideal_poselog.csv  ex_poselog.csv  ideal_poselog.csv
path-planning/matlab/: calculate_waypoints.m  dilate_waypoints.m  initial_processing.m  normalize_waypoints.m  plane_medium_color_map.csv  plot_path.m  produce_diagram.m  read_in_color_map.m
path-planning/test_data/: matlab_out_f84.csv
python-scripts/: check_for_damage.py  geotag.py  image_diff.py  minority_color_detection.py  sort.py
website/: PHP Instructions.txt  airplane1_interactive.htm  airplane1_overview.htm  airplane2_interactive.htm  airplane2_overview.htm  airplane3_interactive.htm  airplane3_overview.htm  airplane4_interactive.htm  airplane4_overview.htm  car2_interactive.htm  car2_overview.htm  car_interactive.htm  car_overview.htm  index.htm  sample_interactive.htm  sample_overview.htm
website/airplane1_overview/: LINK_12.htm  LINK_14.htm  LINK_16.htm  LINK_19.htm  LINK_4.htm  LINK_5.htm  airplane_waypoints.csv  waypoints_backup.csv
website/airplane2_overview/: LINK_15.htm  LINK_17.htm  airplane_waypoints.csv
website/airplane3_overview/: LINK_18.htm  LINK_20.htm  (+6 more)
(+37 files in other folders)
